--- a/E-Quadra.html
+++ b/E-Quadra.html
@@ -28,7 +28,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('C:/Users/Gusta/Downloads/Codes/Projeto/img/quadra.jpg'); /* Diretório */
+            background-image: url('img/quadra.jpg'); /* Diretório */
             background-size: cover; /* Cobrir toda a área */
             background-position: center; /* Centralizar a imagem */
             filter: blur(8px); /* Efeito de blur */
