--- a/Contato.html
+++ b/Contato.html
@@ -26,7 +26,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('C:/Users/Gusta/Downloads/Codes/Projeto/img/quadra.jpg');
+            background-image: url('img/quadra.jpg');
             background-size: cover;
             background-position: center;
             filter: blur(8px);
